correccion de rutas

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Encriptador</title>
-    <link rel="stylesheet" href="/reset.css">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&family=Roboto&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
     
     <header >
         <div class="logo">
-            <h1><img src="/logo.jpg" alt="logo Encriptador"></h1>
+            <h1><img src="assets/img/logo.jpg" alt="logo Encriptador"></h1>
             <h2 class="titulo">ENCRIPTADOR DE TEXTO</h2>
         </div>
     </header>
@@ -31,11 +31,11 @@
     </main>
 
     <footer>
-        <img class="logo-marca" src="/logoDeMarca.jpg" alt="logo de marca">
+        <img class="logo-marca" src="assets/img/logoDeMarca.jpg" alt="logo de marca">
         <p class="by">By Carlos Daniel Echeverri Ramírez</p>
     </footer>
 
-    <script src="/script.js"></script>
+    <script src="assets/script/script.js"></script>
 
 </body>
 </html>
