creo que hoara si la que los pario

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&family=Roboto&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body style="background-image:url(assets/img/backgorund2.jpg);">
     
-    <header >
+    <header>
         <div class="logo">
             <h1><img src="assets/img/logo.jpg" alt="logo Encriptador"></h1>
             <h2 class="titulo">ENCRIPTADOR DE TEXTO</h2>
